--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">Just MSKU</string>
-    <string name="title_activity_main">Just MSKU</string>
+    <string name="app_name">vscode</string>
+    <string name="title_activity_main">vscode</string>
     <string name="package_name">com.justmsku.app</string>
     <string name="custom_url_scheme">com.justmsku.app</string>
 </resources>
